--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,58 +1,48 @@
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #303030;
+    color: #ffffff;
 }
 
-.control-panel-card {
-    margin: 20px;
-    padding: 20px;
-    background-color: #f7f7f7;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.control-panel-content {
+.admin-panel {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
+    height: 100vh;
 }
 
-.rack-temperature-container,
-.chart-container {
-    flex: 1 1 45%;
-    background-color: #ffffff;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+mat-toolbar {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .5);
 }
 
-.additional-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px;
-}
-
-.info-card {
-    flex: 1 1 45%;
-    margin: 10px;
+.content {
+    flex: 1;
     padding: 20px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    overflow-y: auto;
 }
 
-@media (max-width: 768px) {
+.dashboard-card {
+    height: 100%;
+    box-sizing: border-box;
+    background-color: #424242;
+    color: #ffffff;
+}
 
-    .rack-temperature-container,
-    .chart-container,
-    .info-card {
-        flex: 1 1 100%;
-    }
+mat-card-header {
+    background-color: #212121;
+    padding: 16px;
+    margin: -16px -16px 16px -16px;
+}
 
-    .control-panel-content,
-    .additional-cards {
-        flex-direction: column;
-    }
+mat-card-title {
+    color: #ffffff;
+    font-size: 18px;
+}
+
+mat-card-content {
+    height: calc(100% - 68px);
+    overflow: auto;
 }
