--- a/src/app/temperature-bar-chart/temperature-bar-chart.component.html
+++ b/src/app/temperature-bar-chart/temperature-bar-chart.component.html
@@ -1,1 +1,12 @@
-<div id="chart"></div>
+<mat-card class="dashboard-card metrics-panel">
+    <mat-card-header>
+        <mat-card-title>Bar chart diagram for every rack temperature</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="bar-chart-grid-item">
+            <div class="bar-chart-container">
+                <div id="chart"></div>
+            </div>
+        </div>
+    </mat-card-content>
+</mat-card>
