--- a/src/app/rack-temperature/rack-temperature.component.css
+++ b/src/app/rack-temperature/rack-temperature.component.css
@@ -4,10 +4,10 @@
 
 .server-room-container {
     position: relative;
-    width: 100%;
-    height: 70%;
-    padding-top: 60%;
-    /* Aspect ratio 5:3 */
+    width: 50%;
+    left: 25%;
+    height: 50px;
+    padding-top: 20%;
     background-color: #f0f0f0;
     border: 2px solid #333;
     border-radius: 10px;
