--- a/src/app/temperature-bar-chart/temperature-bar-chart.component.html
+++ b/src/app/temperature-bar-chart/temperature-bar-chart.component.html
@@ -1,4 +1,4 @@
-<mat-card class="dashboard-card metrics-panel">
+<mat-card>
     <mat-card-header>
         <mat-card-title>Bar chart diagram for every rack temperature</mat-card-title>
     </mat-card-header>
