--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,6 @@
     <span class="spacer"></span>
     <!-- <span class="timestamp">Last updated: {{ lastUpdated | date:'medium' }}</span> -->
   </mat-toolbar>
-
-  <!--  <div class="dashboard-content">
-
-  </div> -->
   <mat-grid-list cols="1">
     <app-rack-temperature />
   </mat-grid-list>
@@ -20,23 +16,10 @@
       <app-temperature-bar-chart />
     </mat-grid-tile>
     <mat-grid-tile>
-      <mat-card class="dashboard-card trend-analysis">
-        <mat-card-header>
-          <mat-card-title>Temperature Trend</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <app-chart />
-        </mat-card-content>
-      </mat-card>
+      <app-chart />
     </mat-grid-tile>
-    <mat-grid-tile><mat-card class="dashboard-card anomaly-detection">
-        <mat-card-header>
-          <mat-card-title>Anomalies</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <!-- Anomaly Detection component goes here -->
-          <!-- <app-anomaly-detection></app-anomaly-detection> -->
-        </mat-card-content>
-      </mat-card></mat-grid-tile>
+    <mat-grid-tile>
+      <app-logs />
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
