--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,11 +1,17 @@
-<div class="chart-grid-item">
-    <h3>Average Temperature Over Time</h3>
-    <div class="chart-container">
-        <div #chart></div>
-    </div>
-    <p class="timestamp">Last updated: {{ data?.timestamp | date:'medium' }}</p>
-    <div class="chart-actions">
-        <button mat-raised-button color="primary" (click)="startRealTimeUpdates()">Start Stream</button>
-        <button mat-raised-button color="warn" (click)="stopRealTimeUpdates()">Stop Stream</button>
-    </div>
-</div>
+<mat-card class="trend-analysis">
+    <mat-card-header>
+        <mat-card-title>Temperature Trend</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="chart-grid-item">
+            <div class="chart-container">
+                <div #chart></div>
+            </div>
+            <!-- <p class="timestamp">Last updated: {{ data?.timestamp | date:'medium' }}</p>
+            <div class="chart-actions">
+                <button mat-raised-button color="primary" (click)="startRealTimeUpdates()">Start Stream</button>
+                <button mat-raised-button color="warn" (click)="stopRealTimeUpdates()">Stop Stream</button>
+            </div> -->
+        </div>
+    </mat-card-content>
+</mat-card>
