--- a/src/app/rack-temperature/rack-temperature.component.html
+++ b/src/app/rack-temperature/rack-temperature.component.html
@@ -1,6 +1,6 @@
 <mat-card class="heatmap-card">
     <mat-card-header>
-        <mat-card-title>Server Room Temperature Heatmap</mat-card-title>
+        <!-- <mat-card-title>Server Room Temperature Heatmap</mat-card-title> -->
     </mat-card-header>
     <mat-card-content>
         <div class="server-room-container">
@@ -13,7 +13,7 @@
                     </div>
                 </div>
             </div>
-            <div class="room-label">SERVER ROOM</div>
+            <div class="room-label">SERVER ROOM HEAT MAP</div>
         </div>
     </mat-card-content>
 </mat-card>
