--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -7,11 +7,11 @@
             <div class="chart-container">
                 <div #chart></div>
             </div>
-            <!-- <p class="timestamp">Last updated: {{ data?.timestamp | date:'medium' }}</p>
+            <p class="timestamp">Last updated: {{ data?.timestamp | date:'medium' }}</p>
             <div class="chart-actions">
                 <button mat-raised-button color="primary" (click)="startRealTimeUpdates()">Start Stream</button>
                 <button mat-raised-button color="warn" (click)="stopRealTimeUpdates()">Stop Stream</button>
-            </div> -->
+            </div>
         </div>
     </mat-card-content>
 </mat-card>
