--- a/src/app/temperature-bar-chart/temperature-bar-chart.component.html
+++ b/src/app/temperature-bar-chart/temperature-bar-chart.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Bar chart diagram for every rack temperature</mat-card-title>
+        <mat-card-title>Rack temperature</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <div class="bar-chart-grid-item">
