--- a/src/app/simulation-controls/simulation-controls.component.html
+++ b/src/app/simulation-controls/simulation-controls.component.html
@@ -1,4 +1,8 @@
 <div class="button-container">
-    <button class="start-button" (click)="startSimulation()">Start Simulation</button>
-    <button class="stop-button" (click)="stopSimulation()">Stop Simulation</button>
+    <button class="start-button" (click)="startSimulation()">
+        Start Simulation
+    </button>
+    <button class="stop-button" (click)="stopSimulation()">
+        Stop Simulation
+    </button>
 </div>
